# halfway-to-i2k-2025-ome-zarr-tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml
book/: 01_create_ome_zarr.ipynb  02_upload_to_s3.ipynb  03_view_from_web.ipynb  04_work_with_remote_images.ipynb  index.md  myst.yml  testfile.txt
