[project]
name = "Halfway_to_I2K_2025"
authors = [
    { name = "Johannes Soltwedel"}
]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "numpy>=2.0.0",
    "jupyter-book==2.0.0b3",
    "ngff-zarr>=0.18.0",
    "ome-zarr>=0.10.2",
    "napari>=0.6.6",
    "minio>=7.2.18",
    "napari-ome-zarr>=0.6.1",
    "PyQt5",
]
